--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
     
     <div class="wrapper">
 
-     
+      <div class="task1">
+        <p>1. Вивести на екран поточну дату у форматі - 08 листопада 2022 року</p>
+        <p class="outTask1"></p>
+      </div>
+
+      <div class="task2">
+        <p>2. Вивести на екран кількість годин, які пройшли з початку відліку до поточної дати часу</p>
+        <p class="outTask2"></p>
+      </div>
+
+      <div class="task3">
+        <p>3. Порахувати кількість днів до дня народження.
+          Користувач вводить в input дату народження, далі натискає на кнопку і отримує кількість днів до дня народження на екрані
+        </p>
+        <input class="inputTask3" type="date" placeholder="Введіть свій день народження">
+        <button class="taskBtn3" type="submit">start</button>
+        <p class="outTask3"></p>
+      </div>
+
+      <div class="task4">
+        <p>4. Перевірити чи являється поточна дата вихідним днем, результат вивести на екран.
+          Вважати вихідними суботу та неділю
+        </p>
+      </div>
 
     </div>
 
