finish task7 date

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <p>4. Перевірити чи являється поточна дата вихідним днем, результат вивести на екран.
           Вважати вихідними суботу та неділю
         </p>
+        <input class="inputTask4" type="date" placeholder="Введіть дату">
+        <button class="taskBtn4" type="submit">start</button>
+        <p class="outTask4"></p>
       </div>
 
     </div>
